--- a/static/login/index.css
+++ b/static/login/index.css
@@ -14,6 +14,7 @@ input, button {
 .logo {
   margin-top: 20px;
   width: 180px;
+  height: 42px;
 }
 .input-wrapper:nth-of-type(1) {
   padding-top: 20px;
