--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
-{% extends "base.html" %}
+{% extends "layout.html" %}
 
-{% block dom %}
-  <h1>Hello World</h1>
+{% block content %}
+  <h1>hello world</h1>
 {% endblock %}
