--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,8 +21,10 @@
           <li>段位管理</li>
         </ul>
       </div>
-      {% block content %}
-      {% endblock %}
+      <div class="content-wrapper">
+        {% block content %}
+        {% endblock %}
+      </div>
     </div>
   </div>
 {% endblock %}
