--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,25 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <h1>hello world</h1>
+  <table class="table">
+    <thead class="table-thead">
+      <tr>
+        <th>id</th>
+        <th>类别名称</th>
+        <th>操作</th>
+      </tr>
+    </thead>
+    <tbody class="table-tbody">
+      {% for type in types %}
+        <tr class="tbody-tr">
+          <td>{{type.id}}</td>
+          <td>{{type.name}}</td>
+          <td>
+            <a>删除</a>
+            <a>编辑</a>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
 {% endblock %}
