feat: layer + sql
Change-Id: I7f3a6f219cde2fe6d3602acfcfad834fa58a4cb4

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   {% block dom %}
   {% endblock %}
   <script type="text/javascript" src="{{ url_for('static', filename = 'lib/jquery.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename = 'lib/layer.js') }}"></script>
   {% block js %}
   {% endblock %}
 </body>
