--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
   {% endblock %}
   <script type="text/javascript" src="{{ url_for('static', filename = 'lib/jquery.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename = 'lib/layer.js') }}"></script>
+  <script type="text/javascript" src="{{ url_for('static', filename = 'layout/index.js') }}"></script>
   {% block js %}
   {% endblock %}
 </body>
