--- a/static/layout/index.css
+++ b/static/layout/index.css
@@ -46,7 +46,7 @@ a {
 }
 .content-wrapper {
   padding-left: 251px;
-  padding: 50px 50px 50px 251px;
+  padding: 10px 50px 50px 251px;
   box-sizing: border-box;
 }
 .table {
@@ -76,4 +76,30 @@ a {
 }
 .tbody-tr td a {
   margin-right: 10px;
+}
+.content-header {
+  padding: 20px 0px;
+  height: 32px;
+}
+.content-header button {
+  float: right;
+  line-height: 1.5;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  cursor: pointer;
+  background-image: none;
+  border: 1px solid transparent;
+  padding: 0 15px;
+  font-size: 14px;
+  border-radius: 4px;
+  height: 32px;
+  color: #fff;
+  background-color: #1890ff;
+  border-color: #1890ff;
+  outline: none;
+}
+.content-header button:hover {
+  background-color: #40a9ff;
+  border-color: #40a9ff
 }
